add burger menu

--- a/styles/button.less
+++ b/styles/button.less
@@ -1,9 +1,4 @@
-@primary-color: #007bff;
-@success-color: #868e96;
-@info-color: #5bc0de;
-@warning-color: #ffc107;
-@danger-color: #dc3545;
-@dark-color: #343a40;
+@import "colors";
 
 @font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
