--- a/styles/slider.less
+++ b/styles/slider.less
@@ -4,7 +4,7 @@
   margin: auto;
   overflow: hidden;
   position: relative;
-  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.5);
 
   .carousel-slide {
     display: flex;
@@ -15,6 +15,7 @@
 
 #prevButton {
   border: none;
+  outline: none;
   pointer-events: none;
   cursor: pointer;
   background: none;
@@ -26,6 +27,7 @@
 
 #nextButton {
   border: none;
+  outline: none;
   background: none;
   pointer-events: all;
   cursor: pointer;
