--- a/styles/modal.less
+++ b/styles/modal.less
@@ -16,6 +16,12 @@
   z-index: 5;
 }
 
+.modal.modal-top {
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -10%) scale(0);
+}
+
 .modal.active {
   transform: translate(-50%, -50%) scale(1);
 }
@@ -38,6 +44,10 @@
 }
 
 .modal-body {
+  padding: 10px;
+}
+
+.modal-footer {
   padding: 10px;
 }
 
