--- a/styles/burger.less
+++ b/styles/burger.less
@@ -1,7 +1,11 @@
+@import "colors";
+
 @medium: ~"only screen and (max-width: 768px)";
 
 .header__container {
   padding: 10px;
+  background: @dark-color;
+  color: white;
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -16,26 +20,39 @@
       margin: 0 10px;
 
       & a {
+        color: white;
         text-decoration: none;
+
+        &:hover {
+          border-bottom: 1px solid white;
+        }
       }
     }
   }
 }
 
 @media @medium {
+
+  .header__container {
+    height: 120px;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
   .nav-menu {
     transform: scale(0);
 
     &.active {
-      background: black;
-      border: 1px solid black;
+      background: @dark-color;
       transform: scale(1);
-      position: fixed;
-      top: 45px;
+      position: absolute;
+      top: 55px;
       right: 0;
+      left: 0;
       display: flex;
       flex-direction: column;
-
+      align-items: center;
+      padding-bottom: 5px;
     }
   }
 
