--- a/styles/grid.less
+++ b/styles/grid.less
@@ -1,5 +1,6 @@
 @primary-color: blue;
 @secondary-color: grey;
+@font-family: "Helvetica", Helvetica, Arial, sans-serif;
 
 *,
 *:before,
@@ -7,6 +8,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+	font-family: @font-family;
 }
 
 .bg-primary {
