--- a/styles/dataTable.less
+++ b/styles/dataTable.less
@@ -4,14 +4,31 @@
 	border-top: 1px solid darken(white, 50%);
 }
 
+input[type="text"] {
+	padding: 10px 15px;
+}
+
+
 #user-table {
 	width: 50vw;
 	margin: 0 auto;
+
+	.table-search input{
+		width: 100%;
+		padding: 10px 15px;
+		margin-bottom: 10px	;
+	}
 
 	table {
 		border: 1px solid black;
 		border-collapse: collapse;
 		width: 100%;
+
+		button {
+			cursor: pointer;
+			border: none;
+			background: none;
+		}
 
 
 		td, th {
@@ -28,7 +45,7 @@
 			padding-top: 12px;
 			padding-bottom: 12px;
 			background-color: #4CAF50;
-			color: white;
+			color: black;
 		}
 
 		tbody tr td:first-child {
