--- a/styles/dataTable.less
+++ b/styles/dataTable.less
@@ -5,7 +5,7 @@
 }
 
 #user-table {
-	width: 50vw;
+	width: 70vw;
 	margin: 0 auto;
 
 	table {
@@ -41,6 +41,10 @@
 
 		.align-right {
 			text-align: right;
+		}
+
+		.align-center {
+			text-align: center;
 		}
 	}
 }
