--- a/styles/button.less
+++ b/styles/button.less
@@ -96,12 +96,11 @@
   display: inline-block;
   color: black;
   font-size: 1em;
-  text-transform: capitalize;
   font-family: @font-family;
   border: 1px solid transparent;
   cursor: pointer;
   border-radius: 0.2em;
-  padding: 10px;
+  padding: 10px 35px;
   text-decoration: none;
 
   &:active,
