--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,5 +1,5 @@
 @primary-color: #007bff;
-@success-color: #868e96;
+@success-color: #5cb85c;
 @info-color: #5bc0de;
 @warning-color: #ffc107;
 @danger-color: #dc3545;
