--- a/styles/slider.less
+++ b/styles/slider.less
@@ -5,6 +5,7 @@
   overflow: hidden;
   position: relative;
   box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.5);
+	z-index: 5;
 
   .carousel-slide {
     display: flex;
