--- a/styles/my-input.less
+++ b/styles/my-input.less
@@ -9,22 +9,24 @@
 		margin: 0 auto;
 		flex-direction: column;
 
-		label {
+		.input-label {
 			color: rgb(16,16,16);
 			font-weight: 700;
 		}
 
-		input {
+		.input {
 			width: 100%;
 			border: 1px solid gainsboro;
 			padding: 10px 20px;
 			margin: 5px 0;
 		}
+
+		.input-danger {
+			border: 2px solid @danger-color;
+		}
 	}
 }
 
-.input-danger {
-	border: 2px solid @danger-color !important;
-}
+
 
 
